align-ment arabian fixed

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,3 +1,9 @@
+body {
+	font-family: Montserrat;
+}
+.arabian {
+	font-family: OpenSans;
+}
 .container{
 	max-width: 1440px;
 	header{
@@ -279,7 +285,7 @@
         padding: 0;
         margin: 0;
         li {
-            margin-right: 25px;
+            margin-right: 20px;
             display: inline-block;
             a {
                 color: #000;
